# mandarin-discord-bot

./: .gitignore  .sample.env  dictionary_handler.py  example_bot.py  pyproject.toml
data/: chengyu.tsv
mandarin_discord_bot/: bot.py  chengyu.py  dictionary_handler.py
