[tool.poetry]
name = "mandarin-discord-bot"
version = "0.1.0"
description = "Discord bot for helping Chinese / Mandarin language learning"
authors = []
license = "MIT"
readme = "README.md"
packages = [{include = "mandarin_discord_bot"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
